# Todo-In-Memory-Python-Console-App

./: .gitignore  README.md  pyproject.toml  test_app.py
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/001-console-todo-app/: 1-create-console-todo-app-spec.spec.prompt.md  1-generate-tasks.tasks.prompt.md  1-implementation-complete.tasks.prompt.md  1-plan-console-todo-app.plan.prompt.md
history/prompts/constitution/: 1-update-constitution.constitution.prompt.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/checklists/: requirements.md
specs/001-console-todo-app/contracts/: cli-contracts.md
src/todo_app/: cli.py  core.py  main.py  models.py
